mobility_congestion.html

--- a/Mobility/mobility_congestion.html
+++ b/Mobility/mobility_congestion.html
@@ -207,36 +207,26 @@
         <iframe src="/Mobility/Congestion_Heatmap_Random20000_Legend.html" height="500px"></iframe>
       </div>
 
-      <h3>Highly Congested Raod</h3>
-      <div id="congestionHeatmap">
-        <iframe src="/Mobility/Top_10_Most_Congested_Roads.html" height="500px"></iframe>
+      <h3>Congested Road</h3>
+      <div id="Congestion Ranking">
+        <iframe src="/Mobility/congestion_bar_chart.html" height="500px"></iframe>
       </div>
 
-<!-- Two Graphs Side by Side -->
-<h3>Congestion Spatial & Temporal Trend Interstate</h3>
-<div class="graphs-container">
-    <div class="graph" id="congestionTrend">
-      <iframe src="/Mobility/Congestion_Trend_TN18.html" height="500px"></iframe>
-    </div>
-
-    <div class="graph" id="congestionTrend">
-      <iframe src="/Mobility/TN18_Congestion.html" height="500px"></iframe>
-    </div>
-  </div>
+      <h3>Interstate I40</h3>
+      <div id="Congestion I40">
+        <iframe src="/Mobility/I40_congestion_map1.html" height="500px"></iframe>
+      </div>
+    
+      <h3>Interstate I75</h3>
+      <div id="Congestion I75">
+        <iframe src="/Mobility/I75_congestion_map1.html" height="500px"></iframe>
+      </div>
 
 
-<!-- Two Graphs Side by Side -->
-<h3>Congestion Spatial & Temporal Trend Interstate</h3>
-<div class="graphs-container">
-    <div class="graph" id="congestionTrend">
-      <iframe src="/Mobility/Congestion_Trend_I75.html" height="500px"></iframe>
-    </div>
-
-    <div class="graph" id="congestionTrend">
-      <iframe src="/Mobility/Top10_Congested_Intersections_I75.html" height="500px"></iframe>
-    </div>
-  </div>
-
+      <h3>Highway US-70</h3>
+      <div id="Congestion US70">
+        <iframe src="/Mobility/US70_congestion_map1.html" height="500px"></iframe>
+      </div>
 
 
     </section>
